<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".EditBlogActivity">

    <EditText
        android:id="@+id/blog_edit_page_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/blog_edit_page_title_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/blog_edit_page_image_button"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/touch_to_select_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blog_edit_page_title_edit_text" />

    <TextView
        android:id="@+id/blog_edit_page_click_to_select_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/blog_edit_page_click_to_select_image_text"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/blog_edit_page_image_button" />

    <EditText
        android:id="@+id/blog_edit_page_body_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/blog_edit_page_body_hint"
        app:layout_constraintTop_toBottomOf="@id/blog_edit_page_click_to_select_image" />

    <CheckBox
        android:id="@+id/blog_edit_page_public_blog_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/blog_edit_page_public_blog_text"
        app:layout_constraintBottom_toTopOf="@id/blog_edit_page_save_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/blog_edit_page_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/activeButtonBackground"
        android:text="@string/blog_edit_page_save_button_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>